ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Soft_Credit__c/CnP_PaaS__Soft_Credit__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Soft Credit</label>
    <nameField>
        <label>Soft Credit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Soft Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>