ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Soft_Credit__c/fields/CnP_PaaS__C_P_Transaction__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__C_P_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;P Transaction</label>
    <referenceTo>CnP_PaaS__CnP_Transaction__c</referenceTo>
    <relationshipName>Soft_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>