ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Soft_Credit__c/fields/CnP_PaaS__Object_record__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Object_record__c</fullName>
    <label>Object record</label>
    <length>200</length>
    <type>Text</type>
</CustomField>