ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Soft_Credit__c/fields/CnP_PaaS__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Soft_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>