ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Soft_Credit__c/fields/CnP_PaaS__Related_Account__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>C&amp;P Soft Credits Received</relationshipLabel>
    <relationshipName>Soft_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>