ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Soft_Credit__c/fields/CnP_PaaS__Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>C&amp;P Soft Credits Received</relationshipLabel>
    <relationshipName>Soft_Credits1</relationshipName>
    <type>Lookup</type>
</CustomField>