ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Soft_Credit__c/fields/CnP_PaaS__Relationship__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Relationship__c</fullName>
    <label>Relationship</label>
    <length>250</length>
    <type>Text</type>
</CustomField>