ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Soft_Credit__c/fields/CnP_PaaS__SKU_Filter__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__SKU_Filter__c</fullName>
    <label>SKU Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>