ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Soft_Credit__c/fields/CnP_PaaS__Status__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Status__c</fullName>
    <label>Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>