ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Soft_Credit__c/fields/CnP_PaaS__Total_Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Total_Soft_Credit__c</fullName>
    <label>Total Soft Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>